packages/sdpl/sdpl-0.1.tar.gz/sdpl-0.1/grammar/sdplParser.py
# Generated from sdpl.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class sdplParser ( Parser ):

    grammarFileName = "sdpl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'REGISTER'", "'AS'", "';'", "'='", "'LOAD'", 
                     "'SCHEMA'", "'VERSION'", "'TABLE'", "'FROM'", "'WITH'", 
                     "'PROJECTION'", "'('", "')'", "','", "'-'", "'.'", 
                     "'*'", "'EXPAND'", "'STORE'", "'INTO'", "'JOIN'", "'BY'", 
                     "'FILTER'", "'ORDER'", "'GROUP'", "'''", "':'", "'/'", 
                     "'$'", "'{'", "'}'", "'@'", "'%'", "'?'", "'!='", "'=='", 
                     "'<='", "'<'", "'>='", "'>'", "'AND'", "'OR'", "'```'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CO_NE", "CO_EQ", 
                      "CO_LE", "CO_LT", "CO_GE", "CO_GT", "AND", "OR", "QUOTE_DELIM", 
                      "ID", "DECIMAL", "INTEGER", "WS", "SL_COMMENT" ]

    RULE_startrule = 0
    RULE_libDecl = 1
    RULE_relationDecl = 2
    RULE_projectionDecl = 3
    RULE_schemaFields = 4
    RULE_schemaField = 5
    RULE_expandSchema = 6
    RULE_storeDecl = 7
    RULE_storeSchemaDecl = 8
    RULE_joinDecl = 9
    RULE_joinElement = 10
    RULE_relationColumns = 11
    RULE_relationColumn = 12
    RULE_filterDecl = 13
    RULE_filterExpression = 14
    RULE_filterOperation = 15
    RULE_filterOperand = 16
    RULE_orderByDecl = 17
    RULE_groupByDecl = 18
    RULE_quotedString = 19
    RULE_quotedCode = 20
    RULE_compOperator = 21

    ruleNames =  [ "startrule", "libDecl", "relationDecl", "projectionDecl", 
                   "schemaFields", "schemaField", "expandSchema", "storeDecl", 
                   "storeSchemaDecl", "joinDecl", "joinElement", "relationColumns", 
                   "relationColumn", "filterDecl", "filterExpression", "filterOperation", 
                   "filterOperand", "orderByDecl", "groupByDecl", "quotedString", 
                   "quotedCode", "compOperator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    CO_NE=35
    CO_EQ=36
    CO_LE=37
    CO_LT=38
    CO_GE=39
    CO_GT=40
    AND=41
    OR=42
    QUOTE_DELIM=43
    ID=44
    DECIMAL=45
    INTEGER=46
    WS=47
    SL_COMMENT=48

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def libDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.LibDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.LibDeclContext,i)


        def relationDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.RelationDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.RelationDeclContext,i)


        def projectionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.ProjectionDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.ProjectionDeclContext,i)


        def quotedCode(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.QuotedCodeContext)
            else:
                return self.getTypedRuleContext(sdplParser.QuotedCodeContext,i)


        def expandSchema(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.ExpandSchemaContext)
            else:
                return self.getTypedRuleContext(sdplParser.ExpandSchemaContext,i)


        def storeDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.StoreDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.StoreDeclContext,i)


        def storeSchemaDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.StoreSchemaDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.StoreSchemaDeclContext,i)


        def joinDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.JoinDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.JoinDeclContext,i)


        def filterDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.FilterDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.FilterDeclContext,i)


        def orderByDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.OrderByDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.OrderByDeclContext,i)


        def groupByDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.GroupByDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.GroupByDeclContext,i)


        def getRuleIndex(self):
            return sdplParser.RULE_startrule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartrule" ):
                listener.enterStartrule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartrule" ):
                listener.exitStartrule(self)




    def startrule(self):

        localctx = sdplParser.StartruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_startrule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 55
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 44
                    self.libDecl()
                    pass

                elif la_ == 2:
                    self.state = 45
                    self.relationDecl()
                    pass

                elif la_ == 3:
                    self.state = 46
                    self.projectionDecl()
                    pass

                elif la_ == 4:
                    self.state = 47
                    self.quotedCode()
                    pass

                elif la_ == 5:
                    self.state = 48
                    self.expandSchema()
                    pass

                elif la_ == 6:
                    self.state = 49
                    self.storeDecl()
                    pass

                elif la_ == 7:
                    self.state = 50
                    self.storeSchemaDecl()
                    pass

                elif la_ == 8:
                    self.state = 51
                    self.joinDecl()
                    pass

                elif la_ == 9:
                    self.state = 52
                    self.filterDecl()
                    pass

                elif la_ == 10:
                    self.state = 53
                    self.orderByDecl()
                    pass

                elif la_ == 11:
                    self.state = 54
                    self.groupByDecl()
                    pass


                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << sdplParser.T__0) | (1 << sdplParser.T__17) | (1 << sdplParser.T__18) | (1 << sdplParser.QUOTE_DELIM) | (1 << sdplParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LibDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quotedString(self):
            return self.getTypedRuleContext(sdplParser.QuotedStringContext,0)


        def ID(self):
            return self.getToken(sdplParser.ID, 0)

        def getRuleIndex(self):
            return sdplParser.RULE_libDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLibDecl" ):
                listener.enterLibDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLibDecl" ):
                listener.exitLibDecl(self)




    def libDecl(self):

        localctx = sdplParser.LibDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_libDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(sdplParser.T__0)
            self.state = 60
            self.quotedString()
            self.state = 63
            _la = self._input.LA(1)
            if _la==sdplParser.T__1:
                self.state = 61
                self.match(sdplParser.T__1)
                self.state = 62
                self.match(sdplParser.ID)


            self.state = 65
            self.match(sdplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RelationDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(sdplParser.ID, 0)

        def quotedString(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.QuotedStringContext)
            else:
                return self.getTypedRuleContext(sdplParser.QuotedStringContext,i)


        def INTEGER(self):
            return self.getToken(sdplParser.INTEGER, 0)

        def getRuleIndex(self):
            return sdplParser.RULE_relationDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationDecl" ):
                listener.enterRelationDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationDecl" ):
                listener.exitRelationDecl(self)




    def relationDecl(self):

        localctx = sdplParser.RelationDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_relationDecl)
        try:
            self.state = 90
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.match(sdplParser.ID)
                self.state = 68
                self.match(sdplParser.T__3)
                self.state = 69
                self.match(sdplParser.T__4)
                self.state = 70
                self.match(sdplParser.T__5)
                self.state = 71
                self.quotedString()
                self.state = 72
                self.match(sdplParser.T__6)
                self.state = 73
                self.match(sdplParser.INTEGER)
                self.state = 74
                self.match(sdplParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.match(sdplParser.ID)
                self.state = 77
                self.match(sdplParser.T__3)
                self.state = 78
                self.match(sdplParser.T__4)
                self.state = 79
                self.match(sdplParser.T__7)
                self.state = 80
                self.quotedString()
                self.state = 81
                self.match(sdplParser.T__8)
                self.state = 82
                self.quotedString()
                self.state = 83
                self.match(sdplParser.T__9)
                self.state = 84
                self.match(sdplParser.T__5)
                self.state = 85
                self.quotedString()
                self.state = 86
                self.match(sdplParser.T__6)
                self.state = 87
                self.match(sdplParser.INTEGER)
                self.state = 88
                self.match(sdplParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProjectionDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(sdplParser.ID, 0)

        def schemaFields(self):
            return self.getTypedRuleContext(sdplParser.SchemaFieldsContext,0)


        def getRuleIndex(self):
            return sdplParser.RULE_projectionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProjectionDecl" ):
                listener.enterProjectionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProjectionDecl" ):
                listener.exitProjectionDecl(self)




    def projectionDecl(self):

        localctx = sdplParser.ProjectionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_projectionDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(sdplParser.ID)
            self.state = 93
            self.match(sdplParser.T__3)
            self.state = 94
            self.match(sdplParser.T__5)
            self.state = 95
            self.match(sdplParser.T__10)
            self.state = 96
            self.match(sdplParser.T__11)
            self.state = 97
            self.schemaFields()
            self.state = 98
            self.match(sdplParser.T__12)
            self.state = 99
            self.match(sdplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SchemaFieldsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def schemaField(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.SchemaFieldContext)
            else:
                return self.getTypedRuleContext(sdplParser.SchemaFieldContext,i)


        def getRuleIndex(self):
            return sdplParser.RULE_schemaFields

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSchemaFields" ):
                listener.enterSchemaFields(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSchemaFields" ):
                listener.exitSchemaFields(self)




    def schemaFields(self):

        localctx = sdplParser.SchemaFieldsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_schemaFields)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.schemaField()
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==sdplParser.T__13:
                self.state = 102
                self.match(sdplParser.T__13)
                self.state = 103
                self.schemaField()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SchemaFieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(sdplParser.ID)
            else:
                return self.getToken(sdplParser.ID, i)

        def getRuleIndex(self):
            return sdplParser.RULE_schemaField

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSchemaField" ):
                listener.enterSchemaField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSchemaField" ):
                listener.exitSchemaField(self)




    def schemaField(self):

        localctx = sdplParser.SchemaFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_schemaField)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if _la==sdplParser.T__14:
                self.state = 109
                self.match(sdplParser.T__14)


            self.state = 112
            self.match(sdplParser.ID)
            self.state = 113
            self.match(sdplParser.T__15)
            self.state = 114
            _la = self._input.LA(1)
            if not(_la==sdplParser.T__16 or _la==sdplParser.ID):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
            self.state = 117
            _la = self._input.LA(1)
            if _la==sdplParser.T__1:
                self.state = 115
                self.match(sdplParser.T__1)
                self.state = 116
                self.match(sdplParser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpandSchemaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(sdplParser.ID, 0)

        def getRuleIndex(self):
            return sdplParser.RULE_expandSchema

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpandSchema" ):
                listener.enterExpandSchema(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpandSchema" ):
                listener.exitExpandSchema(self)




    def expandSchema(self):

        localctx = sdplParser.ExpandSchemaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expandSchema)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(sdplParser.T__17)
            self.state = 120
            self.match(sdplParser.T__5)
            self.state = 121
            self.match(sdplParser.ID)
            self.state = 122
            self.match(sdplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StoreDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(sdplParser.ID, 0)

        def quotedString(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.QuotedStringContext)
            else:
                return self.getTypedRuleContext(sdplParser.QuotedStringContext,i)


        def getRuleIndex(self):
            return sdplParser.RULE_storeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStoreDecl" ):
                listener.enterStoreDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStoreDecl" ):
                listener.exitStoreDecl(self)




    def storeDecl(self):

        localctx = sdplParser.StoreDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_storeDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(sdplParser.T__18)
            self.state = 125
            self.match(sdplParser.ID)
            self.state = 126
            self.match(sdplParser.T__19)
            self.state = 127
            self.match(sdplParser.T__7)
            self.state = 128
            self.quotedString()
            self.state = 129
            self.match(sdplParser.T__8)
            self.state = 130
            self.quotedString()
            self.state = 131
            self.match(sdplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StoreSchemaDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(sdplParser.ID, 0)

        def quotedString(self):
            return self.getTypedRuleContext(sdplParser.QuotedStringContext,0)


        def getRuleIndex(self):
            return sdplParser.RULE_storeSchemaDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStoreSchemaDecl" ):
                listener.enterStoreSchemaDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStoreSchemaDecl" ):
                listener.exitStoreSchemaDecl(self)




    def storeSchemaDecl(self):

        localctx = sdplParser.StoreSchemaDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_storeSchemaDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(sdplParser.T__18)
            self.state = 134
            self.match(sdplParser.T__5)
            self.state = 135
            self.match(sdplParser.ID)
            self.state = 136
            self.match(sdplParser.T__19)
            self.state = 137
            self.quotedString()
            self.state = 138
            self.match(sdplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class JoinDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(sdplParser.ID, 0)

        def joinElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.JoinElementContext)
            else:
                return self.getTypedRuleContext(sdplParser.JoinElementContext,i)


        def schemaFields(self):
            return self.getTypedRuleContext(sdplParser.SchemaFieldsContext,0)


        def getRuleIndex(self):
            return sdplParser.RULE_joinDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJoinDecl" ):
                listener.enterJoinDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJoinDecl" ):
                listener.exitJoinDecl(self)




    def joinDecl(self):

        localctx = sdplParser.JoinDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_joinDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(sdplParser.ID)
            self.state = 141
            self.match(sdplParser.T__3)
            self.state = 142
            self.match(sdplParser.T__20)
            self.state = 143
            self.joinElement()
            self.state = 146 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 144
                self.match(sdplParser.T__13)
                self.state = 145
                self.joinElement()
                self.state = 148 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==sdplParser.T__13):
                    break

            self.state = 150
            self.match(sdplParser.T__9)
            self.state = 151
            self.match(sdplParser.T__5)
            self.state = 152
            self.match(sdplParser.T__10)
            self.state = 153
            self.match(sdplParser.T__11)
            self.state = 154
            self.schemaFields()
            self.state = 155
            self.match(sdplParser.T__12)
            self.state = 156
            self.match(sdplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class JoinElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(sdplParser.ID, 0)

        def relationColumns(self):
            return self.getTypedRuleContext(sdplParser.RelationColumnsContext,0)


        def getRuleIndex(self):
            return sdplParser.RULE_joinElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJoinElement" ):
                listener.enterJoinElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJoinElement" ):
                listener.exitJoinElement(self)




    def joinElement(self):

        localctx = sdplParser.JoinElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_joinElement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(sdplParser.ID)
            self.state = 159
            self.match(sdplParser.T__21)
            self.state = 160
            self.relationColumns()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RelationColumnsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relationColumn(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.RelationColumnContext)
            else:
                return self.getTypedRuleContext(sdplParser.RelationColumnContext,i)


        def getRuleIndex(self):
            return sdplParser.RULE_relationColumns

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationColumns" ):
                listener.enterRelationColumns(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationColumns" ):
                listener.exitRelationColumns(self)




    def relationColumns(self):

        localctx = sdplParser.RelationColumnsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_relationColumns)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(sdplParser.T__11)
            self.state = 163
            self.relationColumn()
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==sdplParser.T__13:
                self.state = 164
                self.match(sdplParser.T__13)
                self.state = 165
                self.relationColumn()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 171
            self.match(sdplParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RelationColumnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(sdplParser.ID)
            else:
                return self.getToken(sdplParser.ID, i)

        def getRuleIndex(self):
            return sdplParser.RULE_relationColumn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationColumn" ):
                listener.enterRelationColumn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationColumn" ):
                listener.exitRelationColumn(self)




    def relationColumn(self):

        localctx = sdplParser.RelationColumnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_relationColumn)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(sdplParser.ID)
            self.state = 174
            self.match(sdplParser.T__15)
            self.state = 175
            self.match(sdplParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FilterDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(sdplParser.ID)
            else:
                return self.getToken(sdplParser.ID, i)

        def filterExpression(self):
            return self.getTypedRuleContext(sdplParser.FilterExpressionContext,0)


        def getRuleIndex(self):
            return sdplParser.RULE_filterDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilterDecl" ):
                listener.enterFilterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilterDecl" ):
                listener.exitFilterDecl(self)




    def filterDecl(self):

        localctx = sdplParser.FilterDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_filterDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(sdplParser.ID)
            self.state = 178
            self.match(sdplParser.T__3)
            self.state = 179
            self.match(sdplParser.T__22)
            self.state = 180
            self.match(sdplParser.ID)
            self.state = 181
            self.match(sdplParser.T__21)
            self.state = 182
            self.filterExpression(0)
            self.state = 183
            self.match(sdplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FilterExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
